--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:studio": "prisma studio",
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.14.0",
     "date-fns": "^4.1.0",
     "next": "15.4.6",
+    "pg": "^8.16.3",
     "prisma": "^6.14.0",
     "qrcode": "^1.5.3",
     "react": "^19",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/pg": "^8.15.5",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
