--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,10 @@
   },
   "env": {
     "PRISMA_GENERATE_DATAPROXY": "true"
+  },
+  "build": {
+    "env": {
+      "PRISMA_GENERATE_DATAPROXY": "true"
+    }
   }
 }
