--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "outputDirectory": ".next",
   "framework": "nextjs",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
+  "devCommand": "npm dev",
   "regions": ["gru1"],
   "functions": {
     "src/app/api/**/*.ts": {
@@ -11,11 +11,13 @@
     }
   },
   "env": {
-    "PRISMA_GENERATE_DATAPROXY": "true"
+    "PRISMA_GENERATE_DATAPROXY": "false",
+    "DATABASE_URL": "file:./database.db"
   },
   "build": {
     "env": {
-      "PRISMA_GENERATE_DATAPROXY": "true"
+      "PRISMA_GENERATE_DATAPROXY": "false",
+      "DATABASE_URL": "file:./database.db"
     }
   }
 }
