--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
   "framework": "nextjs",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
-  "regions": ["gru1"]
+  "regions": ["gru1"],
+  "functions": {
+    "src/app/api/**/*.ts": {
+      "maxDuration": 30
+    }
+  }
 }
