--- a/env.example
+++ b/env.example
@@ -1,11 +1,23 @@
-# Configuração de ambiente para o projeto
-# Copie este arquivo para .env.local e configure as variáveis
+# Configuração do Banco de Dados
+# Escolha entre SQLite (local) ou PostgreSQL (online)
 
-# Para desenvolvimento local com SQLite (padrão)
-DATABASE_URL="file:./prisma/dev.db"
+# ===== SQLITE (Desenvolvimento Local) =====
+# Para usar SQLite localmente (padrão)
+DATABASE_TYPE=sqlite
+DATABASE_URL=file:./database.db
 
-# Para produção com PostgreSQL/Supabase (descomente e configure)
-# DATABASE_URL="postgresql://usuario:senha@host:porta/banco"
+# ===== POSTGRESQL (Produção Online) =====
+# Para usar PostgreSQL no Vercel/Supabase
+# DATABASE_TYPE=postgres
+# DATABASE_URL=postgresql://username:password@host:port/database
 
-# Configurações do Vercel
-VERCEL=false
+# ===== EXEMPLO SUPABASE =====
+# DATABASE_TYPE=postgres
+# DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
+
+# ===== CONFIGURAÇÕES ADICIONAIS =====
+# Ambiente (development/production)
+NODE_ENV=development
+
+# Configurações do Next.js
+NEXT_PUBLIC_APP_URL=http://localhost:3000
